gl31-master/src/test/deca/context/invalid/complet/sous_type2.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 14: Erreur, A n'est pas convertible en B
//
// Historique:
//    cree le 21/01/2021
class A{}
class B extends A{}
{
    B b = new B();
    b = new A();
}
